Added sample projects

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
             <section class="blog">
                 <h3><u>Projects</u></h3>
                 <ul>
-                    <li>-</li>
-                    <li>-</li>
+                    <li>[Tutorial] - <a href="#">FastAPI</a></li>
+                    <li>[Tutorial] - <a href="#">Flask</a></li>
+                    <li>[Tutorial] - <a href="#">Django</a></li>
                 </ul>
                 </p>
             </section>
