Clean up styling

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 <p>I'm a Software Engineer working in Cybersecurity.</p>
 
                 <p>Weekly updates (27/11/2023):<br>
-                    [Article] <a href="https://www.bleepingcomputer.com/news/security/windows-hello-auth-bypassed-on-microsoft-dell-lenovo-laptops/" target="_blank">Windows Hello auth bypassed by security researchers</a><br>
-                    [Video] <a href="https://www.youtube.com/watch?v=zjkBMFhNj_g&t=784s" target="_blank">Intro to LLMs by Andrej Karpathy</a><br>
+                    [Book - Nonfiction] <a href="https://www.bleepingcomputer.com/news/security/windows-hello-auth-bypassed-on-microsoft-dell-lenovo-laptops/" target="_blank">The Pathless Path</a> by Paul Millerd<br>
+                    [Book - Fiction] <a href="https://www.amazon.com/All-Systems-Red-Kindle-Single-ebook/dp/B01MYZ8X5C" target="_blank">All Systems Red</a> by Martha Wells<br>
                 </p>
             </section>
 
