--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang='en'>
     
 <head>
-        <title>Juan Ugueto's site</title>
+        <title>Echo & Zulu</title>
         <meta name='author' content='Juan Diego Ugueto'>
         <meta name='description' content='Personal website'>
         <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
@@ -17,38 +17,39 @@
     <div class="container">
 
         <header>
-            <h2>Juan Ugueto's blog</h2>
+            <h2>Echo & Zulu</h2>
             <div class="icons">
                 <a href="https://github.com/ugueto" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="https://linkedin.com/in/juan-diego-ugueto/" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a href="https://twitter.com/ugu3to" target="_blank"><i class="fab fa-twitter"></i></a>
+                <a href="https://medium.com/@ugueto" target="_blank"><i class="fab fa-medium"></i></a>
             </div>
             <hr>
         </header>
 
             <section class="about">
-                <h3><u>About</u></h3>
-                <p>I'm a Software Engineer working in Cybersecurity.</p>
+                <h3><u>About me</u></h3>
+                <p>I am an engineer, among other things. Echo & Zulu are my dogs.</p>
 
-                <p>Weekly updates (27/11/2023):<br>
-                    [Book - Nonfiction] <a href="https://www.bleepingcomputer.com/news/security/windows-hello-auth-bypassed-on-microsoft-dell-lenovo-laptops/" target="_blank">The Pathless Path</a> by Paul Millerd<br>
+                <p>Currently reading (January 8th, 2024):<br>
+                    [Book - Nonfiction] <a href="https://www.amazon.com/Pathless-Path-Imagining-Story-Work-ebook/dp/B09QF1ZCT2" target="_blank">The Pathless Path</a> by Paul Millerd<br>
                     [Book - Fiction] <a href="https://www.amazon.com/All-Systems-Red-Kindle-Single-ebook/dp/B01MYZ8X5C" target="_blank">All Systems Red</a> by Martha Wells<br>
                 </p>
             </section>
 
             <section class="blog">
-                <h3><u>Projects</u></h3>
+                <h3><u>Projects & Recs</u></h3>
                 <ul>
-                    <li>[Tutorial] - <a href="#">FastAPI</a></li>
-                    <li>[Tutorial] - <a href="#">Flask</a></li>
-                    <li>[Tutorial] - <a href="#">Django</a></li>
+                    <li>[Blog post] - <a href="https://medium.com/@ugueto/2024-the-year-ahead">2024 - The Year Ahead</a></li>
+                    <li>[Tutorial] - <a href="https://github.com/ugueto/fastapi-tutorial">FastAPI</a></li>
+                    <li>[Tutorial] - <a href="https://github.com/ugueto/flask-tutorial">Flask</a></li>
                 </ul>
                 </p>
             </section>
 
         <footer>
             <hr>
-            <p><a href="mailto:ugueto96@gmail.com">Contact</a> - Juan Diego Ugueto &copy; 2022</p>
+            <p><a href="mailto:ugueto96@gmail.com">Contact</a> - Juan Diego Ugueto &copy; 2024</p>
         </footer>
 
     </div>
