Styling issues fixed

--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
 
             <section class="about">
                 <h3><u>About me</u></h3>
-                <p>I am an engineer, among other things. Echo & Zulu are my dogs.</p>
-
-                <p>Currently reading (January 8th, 2024):<br>
+                <p>I am an engineer, among other things.<br>
+                    In case you were wondering, Echo & Zulu are my dogs.<br>
+                    Here you may find my tinkering documented.<br>
+                    <br>
+                    Currently reading (January 8th, 2024):<br>
                     [Book - Nonfiction] <a href="https://www.amazon.com/Pathless-Path-Imagining-Story-Work-ebook/dp/B09QF1ZCT2" target="_blank">The Pathless Path</a> by Paul Millerd<br>
                     [Book - Fiction] <a href="https://www.amazon.com/All-Systems-Red-Kindle-Single-ebook/dp/B01MYZ8X5C" target="_blank">All Systems Red</a> by Martha Wells<br>
                 </p>
