--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <h3><u>About me</u></h3>
                 <p>I am an engineer, among other things.<br>
                     In case you were wondering, Echo & Zulu are my dogs.<br>
-                    Here you may find my tinkering documented.<br>
+                    And no, I don't need fancy JavaScript for my personal website.<br>
                     <br>
                     Currently reading (January 8th, 2024):<br>
                     [Book - Nonfiction] <a href="https://www.amazon.com/Pathless-Path-Imagining-Story-Work-ebook/dp/B09QF1ZCT2" target="_blank">The Pathless Path</a> by Paul Millerd<br>
