--- a/index.html
+++ b/index.html
@@ -41,11 +41,10 @@
 
             <section class="blog">
                 <h3><u>Projects & Recs</u></h3>
-                <ul>
-                    <li>[Blog post] - <a href="https://medium.com/@ugueto/2024-the-year-ahead">2024 - The Year Ahead</a></li>
-                    <li>[Tutorial] - <a href="https://github.com/ugueto/fastapi-tutorial">FastAPI</a></li>
-                    <li>[Tutorial] - <a href="https://github.com/ugueto/flask-tutorial">Flask</a></li>
-                </ul>
+                <p>
+                [Blog post] - <a href="https://medium.com/@ugueto/2024-the-year-ahead">2024 - The Year Ahead</a><br>
+                [Tutorial] - <a href="https://github.com/ugueto/fastapi-tutorial">FastAPI</a><br>
+                [Tutorial] - <a href="https://github.com/ugueto/flask-tutorial">Flask</a><br>
                 </p>
             </section>
 
