--- a/index.html
+++ b/index.html
@@ -53,10 +53,8 @@
             </p>
         </section>
 
-        <footer>
-            <hr>
-            <p><a href="mailto:ugueto96@gmail.com">Contact</a> - Juan Diego Ugueto &copy; 2024</p>
-        </footer>
+        <div class="b-example-divider"></div>
+
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
             <div class="col-md-4 d-flex align-items-center">
               <a href="mailto:ugueto96@gmail.com" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
@@ -64,13 +62,7 @@
               </a>
               <span class="mb-3 mb-md-0 text-muted">© 2024 Juan Diego Ugueto</span>
             </div>
-        
-            <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-              <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
-              <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
-              <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
-            </ul>
-          </footer>
+        </footer>
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
