--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
               <a href="mailto:ugueto96@gmail.com" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
                 Contact
               </a>
-              <span class="mb-3 mb-md-0 text-muted">© 2024 Juan Diego Ugueto</span>
+              <a href="#" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+                Curriculum Vitae
+              </a>
+              <p class="text-right text-muted">© 2024 Juan Diego Ugueto</p>
             </div>
         </footer>
 
