--- a/index.html
+++ b/index.html
@@ -18,35 +18,30 @@
     <div class="container">
 
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-              <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-              <span class="fs-4">Juan Ugueto</span>
-            </a>
-      
+            <span class="fs-4">Juan Ugueto's blog</span>
             <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-              <li class="nav-item"><a href="https://github.com/ugueto" class="nav-link" aria-current="page" target="_blank"><i class="fab fa-github"></i></a></li>
-              <li class="nav-item"><a href="https://linkedin.com/in/juan-diego-ugueto/" class="nav-link"><i class="fab fa-linkedin"></i></a></li>
-              <li class="nav-item"><a href="https://twitter.com/ugu3to" class="nav-link"><i class="fab fa-twitter"></i></a></li>
-              <li class="nav-item"><a href="https://medium.com/@ugueto" class="nav-link"><i class="fab fa-medium"></i></a></li>
-            </ul>
+                <li class="ms-3"><a href="https://twitter.com/ugu3to"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
+                <li class="ms-3"><a href="https://medium.com/@ugueto"><svg class="bi" width="24" height="24"><use xlink:href="#medium"></use></svg></a></li>
+                <li class="ms-3"><a href="https://linkedin.com/in/juan-diego-ugueto/"><svg class="bi" width="24" height="24"><use xlink:href="#linkedin"></use></svg></a></li>
+                <li class="ms-3"><a href="https://github.com/ugueto"><svg class="bi" width="24" height="24"><use xlink:href="#github"></use></svg></a></li>
+              </ul>
         </header>
 
         <div class="b-example-divider"></div>
     
         <section class="about">
-            <h3><u>About me</u></h3>
-            <p>I am an engineer, among other things.<br>
-                And no, I don't need fancy JavaScript gradient crap on my site.<br>
+            <h3><u>2024 Reading list</u></h3>
+            <p>I often read...<br>
                 <br>
-                Currently reading (January 8th, 2024):<br>
+                2024 Reading list: (Last updated January 8th, 2024):<br>
                 [Book - Nonfiction] <a href="https://www.amazon.com/Pathless-Path-Imagining-Story-Work-ebook/dp/B09QF1ZCT2" target="_blank">The Pathless Path</a> by Paul Millerd<br>
                 [Book - Fiction] <a href="https://www.amazon.com/All-Systems-Red-Kindle-Single-ebook/dp/B01MYZ8X5C" target="_blank">All Systems Red</a> by Martha Wells<br>
             </p>
         </section>
 
         <section class="blog">
-            <h3><u>Projects & Recs</u></h3>
-            <p>
+            <h3><u>Projects</u></h3>
+            <p>... I seldom write.<br>
             [Blog post] - <a href="https://medium.com/@ugueto/2024-the-year-ahead">2024 - The Year Ahead</a><br>
             [Tutorial] - <a href="https://github.com/ugueto/fastapi-tutorial">FastAPI</a><br>
             [Tutorial] - <a href="https://github.com/ugueto/flask-tutorial">Flask</a><br>
