Added icons to header

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <meta name='copyright' content='Juan Diego Ugueto'>
         <link href='./style.css' rel='stylesheet'>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
         <script src="https://kit.fontawesome.com/0d9ce62f43.js" crossorigin="anonymous"></script>
 </head>
 
@@ -18,7 +19,10 @@
     <div class="container">
 
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-            <span class="fs-4">Juan Ugueto's blog</span>
+            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+                <svg class="bi me-2" width="40" height="32"><use xlink:href="#book"></use></svg>
+                <span class="fs-4">Juan Ugueto's blog</span>
+            </a>
             <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
                 <li class="ms-3"><a href="https://twitter.com/ugu3to"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
                 <li class="ms-3"><a href="https://medium.com/@ugueto"><svg class="bi" width="24" height="24"><use xlink:href="#medium"></use></svg></a></li>
@@ -31,7 +35,7 @@
     
         <section class="about">
             <h3><u>2024 Reading list</u></h3>
-            <p>I often read...<br>
+            <p>I often read.<br>
                 <br>
                 2024 Reading list: (Last updated January 8th, 2024):<br>
                 [Book - Nonfiction] <a href="https://www.amazon.com/Pathless-Path-Imagining-Story-Work-ebook/dp/B09QF1ZCT2" target="_blank">The Pathless Path</a> by Paul Millerd<br>
@@ -41,7 +45,7 @@
 
         <section class="blog">
             <h3><u>Projects</u></h3>
-            <p>... I seldom write.<br>
+            <p>I seldom write.<br>
             [Blog post] - <a href="https://medium.com/@ugueto/2024-the-year-ahead">2024 - The Year Ahead</a><br>
             [Tutorial] - <a href="https://github.com/ugueto/fastapi-tutorial">FastAPI</a><br>
             [Tutorial] - <a href="https://github.com/ugueto/flask-tutorial">Flask</a><br>
