--- a/index.html
+++ b/index.html
@@ -77,6 +77,35 @@
             <p>Here you may find blog posts, tutorials, and recommended readings.<br>
                 Topics are usually related to startups, technology, security, and books.
             </p>
+            <div class="list-group w-auto">
+                <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+                  <div class="d-flex gap-2 w-100 justify-content-between">
+                    <div>
+                      <h6 class="mb-0">Sample blog post</h6>
+                      <p class="mb-0 opacity-75">Some placeholder content in a paragraph.</p>
+                    </div>
+                    <small class="opacity-50 text-nowrap">08/01/2024</small>
+                  </div>
+                </a>
+                <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+                  <div class="d-flex gap-2 w-100 justify-content-between">
+                    <div>
+                      <h6 class="mb-0">Sample tutorial</h6>
+                      <p class="mb-0 opacity-75">Some placeholder content in a paragraph.</p>
+                    </div>
+                    <small class="opacity-50 text-nowrap">08/01/2024</small>
+                  </div>
+                </a>
+                <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+                  <div class="d-flex gap-2 w-100 justify-content-between">
+                    <div>
+                      <h6 class="mb-0">Sample recommended reading.</h6>
+                      <p class="mb-0 opacity-75">Some placeholder content in a paragraph.</p>
+                    </div>
+                    <small class="opacity-50 text-nowrap">08/01/2024</small>
+                  </div>
+                </a>
+              </div>
         </section>
 
         <div class="b-example-divider"></div>
