--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 </head>
 
 <body>
-
     <div class="container">
-        <header class="navbar navbar-expand-lg navbar-dark bd-navbar sticky-top">
+        <header class="navbar" style="background-color: cadetblue">
         <div class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
             <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-light text-decoration-none">
                 <svg class="bi me-2" width="40" height="32"><use xlink:href="#book"></use></svg>
