--- a/index.html
+++ b/index.html
@@ -15,20 +15,18 @@
 
 <body>
     <div class="container">
-        <header class="navbar" style="background-color: cadetblue">
-        <div class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-light text-decoration-none">
+        <header class="d-flex justify-content-center py-3">
+            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
                 <svg class="bi me-2" width="40" height="32"><use xlink:href="#book"></use></svg>
                 <span class="fs-4">EchoZulu</span>
             </a>
-            <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+            <ul class="nav nav-pills col-md-4 justify-content-end list-unstyled d-flex">
                 <li class="ms-3"><a href="https://twitter.com/ugu3to"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
                 <li class="ms-3"><a href="https://medium.com/@ugueto"><svg class="bi" width="24" height="24"><use xlink:href="#medium"></use></svg></a></li>
                 <li class="ms-3"><a href="https://linkedin.com/in/juan-diego-ugueto/"><svg class="bi" width="24" height="24"><use xlink:href="#linkedin"></use></svg></a></li>
                 <li class="ms-3"><a href="https://github.com/ugueto"><svg class="bi" width="24" height="24"><use xlink:href="#github"></use></svg></a></li>
-              </ul>
-        </div>
-        </header>
+            </ul>
+          </header>
 
         <div class="b-example-divider"></div>
     
