--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
 
 <body>
     <div class="container">
-        <header class="d-flex justify-content-center py-3">
-            <a href="/" class="text-dark text-decoration-none text-right">
-                <h3>EchoZulu</h3>
-            </a>
+        <header class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-bottom">
+            <h3>EchoZulu</h3>
             <ul class="nav nav-pills col-md-4 justify-content-end list-unstyled d-flex">
                 <li class="ms-3"><a href="https://twitter.com/ugu3to"><svg class="bi" width="24" height="24"><use xlink:href="bootstrap-icons.svg#twitter"></use></svg></a></li>
                 <li class="ms-3"><a href="https://medium.com/@ugueto"><svg class="bi" width="24" height="24"><use xlink:href="bootstrap-icons.svg#medium"></use></svg></a></li>
