--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
         <meta name='copyright' content='Juan Diego Ugueto'>
         <link href='./style.css' rel='stylesheet'>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 </head>
 
 <body>
     <div class="container">
         <header class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-bottom">
-            <h3>EchoZulu</h3>
+            <h2>EchoZulu</h2>
             <ul class="nav nav-pills col-md-4 justify-content-end list-unstyled d-flex">
-                <li class="ms-3"><a href="https://twitter.com/ugu3to"><svg class="bi" width="24" height="24"><use xlink:href="bootstrap-icons.svg#twitter"></use></svg></a></li>
-                <li class="ms-3"><a href="https://medium.com/@ugueto"><svg class="bi" width="24" height="24"><use xlink:href="bootstrap-icons.svg#medium"></use></svg></a></li>
-                <li class="ms-3"><a href="https://linkedin.com/in/juan-diego-ugueto/"><svg class="bi" width="24" height="24"><use xlink:href="bootstrap-icons.svg#linkedin"></use></svg></a></li>
-                <li class="ms-3"><a href="https://github.com/ugueto"><svg class="bi" width="24" height="24"><use xlink:href="bootstrap-icons.svg#github"></use></svg></a></li>
+                <li class="ms-3"><a href="https://twitter.com/ugu3to"><i class="bi bi-twitter"></i></a></li>
+                <li class="ms-3"><a href="https://medium.com/@ugueto"><i class="bi bi-medium"></i></a></li>
+                <li class="ms-3"><a href="https://linkedin.com/in/juan-diego-ugueto/"><i class="bi bi-linkedin"></i></a></li>
+                <li class="ms-3"><a href="https://github.com/ugueto"><i class="bi bi-github"></i></a></li>
             </ul>
           </header>
 
