--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <header class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-bottom">
             <h2>EchoZulu</h2>
             <ul class="nav nav-pills col-md-4 justify-content-end list-unstyled d-flex">
-                <li class="ms-3"><a href="https://twitter.com/ugu3to"><i class="bi bi-twitter"></i></a></li>
-                <li class="ms-3"><a href="https://medium.com/@ugueto"><i class="bi bi-medium"></i></a></li>
-                <li class="ms-3"><a href="https://linkedin.com/in/juan-diego-ugueto/"><i class="bi bi-linkedin"></i></a></li>
-                <li class="ms-3"><a href="https://github.com/ugueto"><i class="bi bi-github"></i></a></li>
+                <li class="ms-3"><a class="text-decoration-none" href="https://twitter.com/ugu3to"><i class="bi bi-twitter"></i></a></li>
+                <li class="ms-3"><a class="text-decoration-none" href="https://medium.com/@ugueto"><i class="bi bi-medium"></i></a></li>
+                <li class="ms-3"><a class="text-decoration-none" href="https://linkedin.com/in/juan-diego-ugueto/"><i class="bi bi-linkedin"></i></a></li>
+                <li class="ms-3"><a class="text-decoration-none" href="https://github.com/ugueto"><i class="bi bi-github"></i></a></li>
             </ul>
           </header>
 
