--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <header class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-bottom">
             <h2>EchoZulu</h2>
             <ul class="nav nav-pills col-md-4 justify-content-end list-unstyled d-flex">
-                <li class="ms-3"><a class="text-decoration-none" href="https://twitter.com/ugu3to"><i class="bi bi-twitter"></i></a></li>
-                <li class="ms-3"><a class="text-decoration-none" href="https://medium.com/@ugueto"><i class="bi bi-medium"></i></a></li>
-                <li class="ms-3"><a class="text-decoration-none" href="https://linkedin.com/in/juan-diego-ugueto/"><i class="bi bi-linkedin"></i></a></li>
-                <li class="ms-3"><a class="text-decoration-none" href="https://github.com/ugueto"><i class="bi bi-github"></i></a></li>
+                <li class="ms-3"><a class="text-dark text-muted" href="https://twitter.com/ugu3to"><i class="bi bi-twitter" height="26" width="26"></i></a></li>
+                <li class="ms-3"><a class="text-dark text-muted" href="https://medium.com/@ugueto"><i class="bi bi-medium" height="26" width="26"></i></a></li>
+                <li class="ms-3"><a class="text-dark text-muted" href="https://linkedin.com/in/juan-diego-ugueto/"><i class="bi bi-linkedin" height="26" width="26"></i></a></li>
+                <li class="ms-3"><a class="text-dark text-muted" href="https://github.com/ugueto"><i class="bi bi-github" height="26" width="26"></i></a></li>
             </ul>
           </header>
 
@@ -75,7 +75,7 @@
                 <a href="https://www.youtube.com/watch?v=ia6Di_ytiSE" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
                   <div class="d-flex gap-2 w-100 justify-content-between">
                     <div>
-                      <h6 class="mb-0">[PODCAST] AirBnB CEO Brian Chesky on The Diary Of a CEO</h6>
+                      <h6 class="mb-0">[PODCAST] AirBnB CEO Brian Chesky on The Diary Of A CEO</h6>
                       <p class="mb-0 opacity-75">Includes some fantastic lessons for everyone.</p>
                     </div>
                     <small class="opacity-50 text-nowrap">08/01/2024</small>
