--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <p>I am many things, but my job title says software engineer.<br>
                 EchoZulu is my blog (and also the name of my dogs).
             </p>
+            <h6>2024 Reading list</h6>
             <div class="list-group w-auto">
                 <label class="list-group-item d-flex gap-3">
                     <input class="form-check-input flex-shrink-0" type="checkbox" value="" style="font-size: 1.375em;">
@@ -72,6 +73,15 @@
                 Topics are usually related to startups, technology, security, and books.
             </p>
             <div class="list-group w-auto">
+                <a href="" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+                  <div class="d-flex gap-2 w-100 justify-content-between">
+                    <div>
+                      <h6 class="mb-0">[ARTICLE] Meet Ika & Sal: The Bulletproof Hosting Duo From Hell</h6>
+                      <p class="mb-0 opacity-75">Research done by Brian Krebs on Spamdot cybercriminals.</p>
+                    </div>
+                    <small class="opacity-50 text-nowrap">10/01/2024</small>
+                  </div>
+                </a>
                 <a href="https://www.youtube.com/watch?v=ia6Di_ytiSE" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
                   <div class="d-flex gap-2 w-100 justify-content-between">
                     <div>
