--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                   <span class="pt-1 form-checked-content">
                   <strong><a href="https://www.amazon.com/Storm-Front-Dresden-Files-Book-ebook/dp/B000WH7PLS">Storm Front</a> by Jim Butcher.</strong>
                   <small class="d-block text-muted">
-                      <svg class="bi me-1" width="1em" height="1em"><use xlink:href="bootstrap-icons.svg#book"></use></svg>
+                    <i class="bi bi-book" height="1em" width="1em"></i>
                       15/01/2024
                   </small>
                   </span>
@@ -47,9 +47,9 @@
                 <label class="list-group-item d-flex gap-3">
                     <input class="form-check-input flex-shrink-0" type="checkbox" value="" style="font-size: 1.375em;">
                     <span class="pt-1 form-checked-content">
-                    <strong><a href="https://www.amazon.com/Accelerate-Software-Performing-Technology-Organizations/dp/1942788339">Accelerate</a> by Nicole Forsgren, Gene Kim, and Jez Humble.</strong>
+                    <strong><a href="https://www.amazon.com/Accelerate-Software-Performing-Technology-Organizations/dp/1942788339">Accelerate</a> by Forsgren, et al.</strong>
                     <small class="d-block text-muted">
-                        <svg class="bi me-1" width="1em" height="1em"><use xlink:href="bootstrap-icons.svg#book"></use></svg>
+                      <i class="bi bi-book" height="1em" width="1em"></i>
                         10/01/2024
                     </small>
                     </span>
@@ -59,7 +59,7 @@
                     <span class="pt-1 form-checked-content">
                     <strong><a href="https://www.amazon.com/Pathless-Path-Imagining-Story-Work/dp/B09QF6Q421">The Pathless Path</a> by Paul Millerd</strong>
                     <small class="d-block text-muted">
-                        <svg class="bi me-1" width="1em" height="1em"><use xlink:href="bootstrap-icons.svg#book"></use></svg>
+                      <i class="bi bi-calendar-check" height="1em" width="1em"></i>
                         03/01/2024
                     </small>
                     </span>
@@ -69,7 +69,7 @@
                     <span class="pt-1 form-checked-content">
                     <strong><a href="https://www.amazon.com/All-Systems-Red-Murderbot-Diaries/dp/0765397536">All Systems Red</a> by Martha Wells</strong>
                     <small class="d-block text-muted">
-                        <svg class="bi me-1" width="1em" height="1em"><use xlink:href="bootstrap-icons.svg#calendar-check"></use></svg>
+                      <i class="bi bi-calendar-check" height="1em" width="1em"></i>
                         03/01/2024
                     </small>
                     </span>
