New header / footer look

--- a/index.html
+++ b/index.html
@@ -16,13 +16,7 @@
 <body>
     <div class="container">
         <header class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-bottom">
-            <h2>EchoZulu</h2>
-            <ul class="nav nav-pills col-md-4 justify-content-end list-unstyled d-flex">
-                <li class="ms-3"><a class="text-dark text-muted" href="https://twitter.com/ugu3to"><i class="bi bi-twitter" height="34" width="34"></i></a></li>
-                <li class="ms-3"><a class="text-dark text-muted" href="https://medium.com/@ugueto"><i class="bi bi-medium" height="34" width="34"></i></a></li>
-                <li class="ms-3"><a class="text-dark text-muted" href="https://linkedin.com/in/juan-diego-ugueto/"><i class="bi bi-linkedin" height="34" width="34"></i></a></li>
-                <li class="ms-3"><a class="text-dark text-muted" href="https://github.com/ugueto"><i class="bi bi-github" height="34" width="34"></i></a></li>
-            </ul>
+            <h2 class="col-4 text-dark text-center">EchoZulu</h2>
           </header>
 
         <div class="b-example-divider"></div>
@@ -138,8 +132,11 @@
               <p class="text-right text-muted">© 2024 Juan Diego Ugueto</p>
             </div>      
             <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-                <li class="ms-3"><a href="#" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">Curriculum Vitae</a></li>
-                <li class="ms-3"><a href="mailto:ugueto96@gmail.com" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">Contact</a></li>
+              <li class="ms-3"><a class="text-muted" href="https://twitter.com/ugu3to"><i class="bi bi-twitter" height="24" width="24"></i></a></li>
+              <li class="ms-3"><a class="text-muted" href="https://medium.com/@ugueto"><i class="bi bi-medium" height="24" width="24"></i></a></li>
+              <li class="ms-3"><a class="text-muted" href="https://github.com/ugueto"><i class="bi bi-github" height="24" width="24"></i></a></li>
+              <li class="ms-3"><a class="text-muted" href="https://linkedin.com/in/juan-diego-ugueto/"><i class="bi bi-linkedin" height="24" width="24"></i></a></li>
+              <li class="ms-3"><a class="text-muted" href="mailto:ugueto96@gmail.com"><i class="bi bi-envelope-at" height="24" width="24"></i></a></li>
             </ul>
         </footer>
     </div>
