--- a/index.html
+++ b/index.html
@@ -15,9 +15,17 @@
 
 <body>
     <div class="container">
-        <header class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-bottom">
-            <h2 class="col-4 text-dark text-center">EchoZulu</h2>
-          </header>
+      <div class="row flex-nowrap justify-content-between align-items-center">
+        <div class="col-4 pt-1">
+          <a class="link-secondary" href="#">Subscribe</a>
+        </div>
+        <div class="col-4 text-center">
+          <a class="blog-header-logo text-dark" href="#">EchoZulu</a>
+        </div>
+        <div class="col-4 d-flex justify-content-end align-items-center">
+          <a class="btn btn-sm btn-outline-secondary" href="#">Sign up</a>
+        </div>
+      </div>
 
         <div class="b-example-divider"></div>
 
