--- a/index.html
+++ b/index.html
@@ -15,19 +15,9 @@
 
 <body>
     <div class="container">
-      <div class="row flex-nowrap justify-content-between align-items-center">
-        <div class="col-4 pt-1">
-          <a class="link-secondary" href="#">Subscribe</a>
-        </div>
-        <div class="col-4 text-center">
-          <a class="blog-header-logo text-dark" href="#">EchoZulu</a>
-        </div>
-        <div class="col-4 d-flex justify-content-end align-items-center">
-          <a class="btn btn-sm btn-outline-secondary" href="#">Sign up</a>
-        </div>
-      </div>
-
-        <div class="b-example-divider"></div>
+        <header class="d-flex flex-wrap text-center py-3 my-4 border-bottom">
+            <h2><u>EchoZulu</u></h2>
+          </header>
 
         <section class="about">
             <h4><u>About</u></h4>
@@ -132,8 +122,6 @@
                 </a>
               </div>
         </section>
-
-        <div class="b-example-divider"></div>
 
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
             <div class="col-md-4 d-flex align-items-center">
