Centered header title

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
 <body>
     <div class="container">
-        <header class="d-flex flex-wrap text-center py-3 my-4 border-bottom">
-            <h2><u>EchoZulu</u></h2>
+        <header class="d-flex flex-wrap justify-content-center py-3 my-4 border-bottom">
+            <h1 class="text-center">EchoZulu</h1>
           </header>
 
         <section class="about">
             <h4><u>About</u></h4>
-            <p>I am many things, but my job title says software engineer.<br>
+            <p>My name is Juan Diego, I am a Software Engineer working in Swiss Re's Cyber Defence department. Previously, I worked at Levity AI and Amazon.<br>
                 EchoZulu is my blog (and also the name of my dogs).
             </p>
             <h6>2024 Reading list</h6>
