Removed br tag from paragraph

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
 
         <section class="about">
             <h4><u>About</u></h4>
-            <p>My name is Juan Diego, I am a Software Engineer working in Swiss Re's Cyber Defence department. Previously, I worked at Levity AI and Amazon.<br>
-                EchoZulu is my blog (and also the name of my dogs).
+            <p>My name is Juan Diego Ugueto, I am a Software Engineer working with Swiss Re's Cyber Defence department.
+              Previously, I worked at Levity AI and Amazon.
+              EchoZulu is my blog, and no, I don't need fancy JavaScript for my site. 
+              Plain HTML, CSS, and Bootstrap is fine.
             </p>
             <h6>2024 Reading list</h6>
             <div class="list-group w-auto">
