Changed about section

--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
 
         <section class="about">
             <h4><u>About</u></h4>
-            <p>My name is Juan Diego Ugueto, I am a Software Engineer working with Swiss Re's Cyber Defence department.
-              Previously, I worked at Levity AI and Amazon.
-              EchoZulu is my blog, and no, I don't need fancy JavaScript for my site. 
-              Plain HTML, CSS, and Bootstrap is fine.
+            <p>My name is Juan Diego Ugueto, I am a Software Engineer working with Swiss Re's Cyber Defence department.<br>
+              Previously, I worked at Levity AI and Amazon.<br>
+              Mostly I code with Python, that's why you won't see any fancy JavaScript here anytime soon.
             </p>
             <h6>2024 Reading list</h6>
             <div class="list-group w-auto">
