--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
         <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1'>
         <meta name='copyright' content='Juan Diego Ugueto'>
-        <link href='./style.css' rel='stylesheet'>
+        <link href='./css/style.css' rel='stylesheet'>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 </head>
@@ -19,18 +19,14 @@
             <h1 class="text-center">EchoZulu</h1>
           </header>
 
-        <section class="about">
-            <h4><u>About</u></h4>
-            <p>My name is Juan Diego Ugueto, I am a Software Engineer working with Swiss Re's Cyber Defence department.<br>
-              Previously, I worked at Levity AI and Amazon.<br>
-              Mostly I code with Python, that's why you won't see any fancy JavaScript here anytime soon.
-            </p>
-            <h6>2024 Reading list</h6>
+        <section class="books">
+            <h4><u>Books</u></h4>
+            <p>Here you may find all the books I have read this year:<br></p>
             <div class="list-group w-auto">
                 <label class="list-group-item d-flex gap-3">
                   <input class="form-check-input flex-shrink-0" type="checkbox" value="" style="font-size: 1.375em;">
                   <span class="pt-1 form-checked-content">
-                  <strong><a href="https://www.amazon.com/Storm-Front-Dresden-Files-Book-ebook/dp/B000WH7PLS" target="_blank">Storm Front</a> by Jim Butcher.</strong>
+                  <strong><a href="https://www.amazon.com/Storm-Front-Dresden-Files-Book-ebook/dp/B000WH7PLS" target="_blank">Storm Front</a> by Jim Butcher</strong>
                   <small class="d-block text-muted">
                     <i class="bi bi-book" height="1em" width="1em"></i>
                       15/01/2024
