--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
                 <label class="list-group-item d-flex gap-3">
                   <input class="form-check-input flex-shrink-0" type="checkbox" value="" style="font-size: 1.375em;">
                   <span class="pt-1 form-checked-content">
+                  <strong><a href="https://www.amazon.com/Stardust-Neil-Gaiman/dp/0755322827" target="_blank">Stardust</a> by Neil Gaiman</strong>
+                  <small class="d-block text-muted">
+                    <i class="bi bi-book" height="1em" width="1em"></i>
+                      24/01/2024
+                  </small>
+                  </span>
+                </label>
+                <label class="list-group-item d-flex gap-3">
+                  <input class="form-check-input flex-shrink-0" type="checkbox" value="" checked="" style="font-size: 1.375em;">
+                  <span class="pt-1 form-checked-content">
                   <strong><a href="https://www.amazon.com/Storm-Front-Dresden-Files-Book-ebook/dp/B000WH7PLS" target="_blank">Storm Front</a> by Jim Butcher</strong>
                   <small class="d-block text-muted">
                     <i class="bi bi-book" height="1em" width="1em"></i>
@@ -72,6 +82,15 @@
                 Topics are usually related to startups, technology, security, and books.
             </p>
             <div class="list-group w-auto">
+                <a href="https://empleatech.es/" class="list-group-item list-group-item-action d-flex gap-3 py-3" target="_blank">
+                  <div class="d-flex gap-2 w-100 justify-content-between">
+                    <div>
+                      <h6 class="mb-0">[ANNOUNCEMENT] EmpleaTech 2024 Madrid - CyberSecurity presentation</h6>
+                      <p class="mb-0 opacity-75">Kind of a personal announcement: I will be doing a short presentation to MSc in CyberSecurity candidates at EmpleaTech Madrid. Feel free to sign up.</p>
+                    </div>
+                    <small class="opacity-50 text-nowrap">17/01/2024</small>
+                  </div>
+                </a>
                 <a href="https://www.youtube.com/watch?v=7J2_G4oHRQ0" class="list-group-item list-group-item-action d-flex gap-3 py-3" target="_blank">
                   <div class="d-flex gap-2 w-100 justify-content-between">
                     <div>
