--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                   <span class="pt-1 form-checked-content">
                   <strong><a href="https://www.amazon.com/Stardust-Neil-Gaiman/dp/0755322827" target="_blank">Stardust</a> by Neil Gaiman</strong>
                   <small class="d-block text-muted">
-                    <i class="bi bi-book" height="1em" width="1em"></i>
+                    <i class="bi bi-calendar-check" height="1em" width="1em"></i>
                       24/01/2024
                   </small>
                   </span>
@@ -58,7 +58,7 @@
                   <span class="pt-1 form-checked-content">
                   <strong><a href="https://www.amazon.com/Storm-Front-Dresden-Files-Book-ebook/dp/B000WH7PLS" target="_blank">Storm Front</a> by Jim Butcher</strong>
                   <small class="d-block text-muted">
-                    <i class="bi bi-book" height="1em" width="1em"></i>
+                    <i class="bi bi-calendar-check" height="1em" width="1em"></i>
                       15/01/2024
                   </small>
                   </span>
@@ -68,7 +68,7 @@
                     <span class="pt-1 form-checked-content">
                     <strong><a href="https://www.amazon.com/Accelerate-Software-Performing-Technology-Organizations/dp/1942788339" target="_blank">Accelerate</a> by Forsgren, et al.</strong>
                     <small class="d-block text-muted">
-                      <i class="bi bi-book" height="1em" width="1em"></i>
+                      <i class="bi bi-calendar-check" height="1em" width="1em"></i>
                         10/01/2024
                     </small>
                     </span>
