--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <a href="https://tylervigen.com" class="list-group-item list-group-item-action d-flex gap-3 py-3" target="_blank">
                   <div class="d-flex gap-2 w-100 justify-content-between">
                     <div>
-                      <h6 class="mb-0">[BLOG] Spurious correlations</h6>
+                      <h6 class="mb-0">[MISC] Spurious correlations</h6>
                       <p class="mb-0 opacity-75">Interesting website detailing why "correlation does not imply causation".</p>
                     </div>
                     <small class="opacity-50 text-nowrap">27/01/2024</small>
@@ -123,7 +123,7 @@
                 <a href="https://empleatech.es/" class="list-group-item list-group-item-action d-flex gap-3 py-3" target="_blank">
                   <div class="d-flex gap-2 w-100 justify-content-between">
                     <div>
-                      <h6 class="mb-0">[ANNOUNCEMENT] EmpleaTech 2024 Madrid - CyberSecurity presentation</h6>
+                      <h6 class="mb-0">[MISC] EmpleaTech 2024 Madrid - CyberSecurity presentation</h6>
                       <p class="mb-0 opacity-75">Kind of a personal announcement: I will be doing a short presentation to MSc in CyberSecurity candidates at EmpleaTech Madrid. Feel free to sign up.</p>
                     </div>
                     <small class="opacity-50 text-nowrap">17/01/2024</small>
