--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
         <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
         <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1'>
         <meta name='copyright' content='Juan Diego Ugueto'>
+        <link href='./css/style.css' rel='stylesheet'>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
-        <link href='./css/style.css' rel='stylesheet'>
 </head>
 
-<body>
+<body style="font-family: 'Courier New', Courier, monospace;">
     <div class="container">
         <header class="d-flex flex-wrap justify-content-center py-3 my-4 border-bottom">
             <h1 class="text-center">EchoZulu</h1>
