--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 </head>
 
-<body style="font-family: 'Courier New', Courier, monospace;">
+<body>
     <div class="container">
         <header class="d-flex flex-wrap justify-content-center py-3 my-4 border-bottom">
             <h1 class="text-center">EchoZulu</h1>
