--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <h1 class="text-center">EchoZulu</h1>
           </header>
 
-        <section class="books">
+        <section class="books text-bg-dark">
             <h4><u>Books</u></h4>
             <p>Here you may find all the books I have read this year:<br></p>
-            <div class="list-group w-auto">
+            <div class="list-group w-auto text-white">
                 <label class="list-group-item d-flex gap-3">
                   <input class="form-check-input flex-shrink-0" type="checkbox" value="" style="font-size: 1.375em;">
                   <span class="pt-1 form-checked-content">
@@ -96,12 +96,12 @@
             </div>
         </section>
 
-        <section class="blog">
+        <section class="blog text-bg-dark">
             <h4><u>Blog</u></h4>
-            <p>Here you may find blog posts, tutorials, and recommended readings.<br>
+            <p>Here you may find an assortment of reads and listens.<br>
                 Topics are usually related to startups, technology, security, and books.
             </p>
-            <div class="list-group w-auto">
+            <div class="list-group w-auto text-white">
                 <a href="https://tylervigen.com" class="list-group-item list-group-item-action d-flex gap-3 py-3" target="_blank">
                   <div class="d-flex gap-2 w-100 justify-content-between">
                     <div>
@@ -188,14 +188,14 @@
 
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
             <div class="col-md-4 d-flex align-items-center">
-              <p class="text-right text-muted">© 2024 Juan Diego Ugueto</p>
+              <p class="text-right">© 2024 Juan Diego Ugueto</p>
             </div>      
             <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-              <li class="ms-3"><a class="text-muted" href="https://twitter.com/ugu3to" target="_blank"><i class="bi bi-twitter" height="24" width="24"></i></a></li>
-              <li class="ms-3"><a class="text-muted" href="https://medium.com/@ugueto" target="_blank"><i class="bi bi-medium" height="24" width="24"></i></a></li>
-              <li class="ms-3"><a class="text-muted" href="https://github.com/ugueto" target="_blank"><i class="bi bi-github" height="24" width="24"></i></a></li>
-              <li class="ms-3"><a class="text-muted" href="https://linkedin.com/in/juan-diego-ugueto/" target="_blank"><i class="bi bi-linkedin" height="24" width="24"></i></a></li>
-              <li class="ms-3"><a class="text-muted" href="mailto:ugueto96@gmail.com" target="_blank"><i class="bi bi-envelope-at" height="24" width="24"></i></a></li>
+              <li class="ms-3"><a href="https://twitter.com/ugu3to" target="_blank"><i class="bi bi-twitter" height="24" width="24"></i></a></li>
+              <li class="ms-3"><a href="https://medium.com/@ugueto" target="_blank"><i class="bi bi-medium" height="24" width="24"></i></a></li>
+              <li class="ms-3"><a href="https://github.com/ugueto" target="_blank"><i class="bi bi-github" height="24" width="24"></i></a></li>
+              <li class="ms-3"><a href="https://linkedin.com/in/juan-diego-ugueto/" target="_blank"><i class="bi bi-linkedin" height="24" width="24"></i></a></li>
+              <li class="ms-3"><a href="mailto:ugueto96@gmail.com" target="_blank"><i class="bi bi-envelope-at" height="24" width="24"></i></a></li>
             </ul>
         </footer>
     </div>
