--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <h1 class="text-center">EchoZulu</h1>
           </header>
 
-        <section class="books text-bg-dark">
+        <section class="books">
             <h4><u>Books</u></h4>
             <p>Here you may find all the books I have read this year:<br></p>
-            <div class="list-group w-auto text-white">
+            <div class="list-group w-auto list-group-mine">
                 <label class="list-group-item d-flex gap-3">
                   <input class="form-check-input flex-shrink-0" type="checkbox" value="" style="font-size: 1.375em;">
                   <span class="pt-1 form-checked-content">
@@ -96,12 +96,12 @@
             </div>
         </section>
 
-        <section class="blog text-bg-dark">
+        <section class="blog">
             <h4><u>Blog</u></h4>
             <p>Here you may find an assortment of reads and listens.<br>
                 Topics are usually related to startups, technology, security, and books.
             </p>
-            <div class="list-group w-auto text-white">
+            <div class="list-group list-group-mine w-auto">
                 <a href="https://tylervigen.com" class="list-group-item list-group-item-action d-flex gap-3 py-3" target="_blank">
                   <div class="d-flex gap-2 w-100 justify-content-between">
                     <div>
