--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
                 <label class="list-group-item d-flex gap-3">
                   <input class="form-check-input flex-shrink-0" type="checkbox" value="" style="font-size: 1.375em;">
                   <span class="pt-1 form-checked-content">
+                  <strong><a href="https://www.amazon.com/Surely-Feynman-Adventures-Curious-Character/dp/0393316041" target="_blank">Surely You're Joking, Mr. Feynman!</a> by Richard P. Feynman</strong>
+                  <small class="d-block text-muted">
+                    <i class="bi bi-book" height="1em" width="1em"></i>
+                      04/02/2024
+                  </small>
+                  </span>
+                </label>
+                <label class="list-group-item d-flex gap-3">
+                  <input class="form-check-input flex-shrink-0" type="checkbox" value="" style="font-size: 1.375em;">
+                  <span class="pt-1 form-checked-content">
                   <strong><a href="https://www.amazon.com/Malice-Faithful-Fallen-John-Gwynne/dp/0316399736" target="_blank">Malice</a> by John Gwynne</strong>
                   <small class="d-block text-muted">
                     <i class="bi bi-book" height="1em" width="1em"></i>
@@ -102,6 +112,15 @@
                 Topics are usually related to startups, technology, security, and books.
             </p>
             <div class="list-group list-group-mine w-auto">
+                <a href="https://www.youtube.com/watch?v=QmWspqG42Is" class="list-group-item list-group-item-action d-flex gap-3 py-3" target="_blank">
+                  <div class="d-flex gap-2 w-100 justify-content-between">
+                    <div>
+                      <h6 class="mb-0">[VIDEO] Higher Ed Crisis: Ask Us Anything!</h6>
+                      <p class="mb-0 opacity-75">Third and final round: Higher Ed Q&A with Ben & Marc.</p>
+                    </div>
+                    <small class="opacity-50 text-nowrap">27/01/2024</small>
+                  </div>
+                </a>
                 <a href="https://tylervigen.com" class="list-group-item list-group-item-action d-flex gap-3 py-3" target="_blank">
                   <div class="d-flex gap-2 w-100 justify-content-between">
                     <div>
@@ -191,11 +210,11 @@
               <p class="text-right">© 2024 Juan Diego Ugueto</p>
             </div>      
             <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-              <li class="ms-3"><a href="https://twitter.com/ugu3to" target="_blank"><i class="bi bi-twitter" height="24" width="24"></i></a></li>
-              <li class="ms-3"><a href="https://medium.com/@ugueto" target="_blank"><i class="bi bi-medium" height="24" width="24"></i></a></li>
-              <li class="ms-3"><a href="https://github.com/ugueto" target="_blank"><i class="bi bi-github" height="24" width="24"></i></a></li>
-              <li class="ms-3"><a href="https://linkedin.com/in/juan-diego-ugueto/" target="_blank"><i class="bi bi-linkedin" height="24" width="24"></i></a></li>
-              <li class="ms-3"><a href="mailto:ugueto96@gmail.com" target="_blank"><i class="bi bi-envelope-at" height="24" width="24"></i></a></li>
+              <li class="ms-3 text-muted"><a href="https://twitter.com/ugu3to" target="_blank"><i class="bi bi-twitter" height="24" width="24"></i></a></li>
+              <li class="ms-3 text-muted"><a href="https://medium.com/@ugueto" target="_blank"><i class="bi bi-medium" height="24" width="24"></i></a></li>
+              <li class="ms-3 text-muted"><a href="https://github.com/ugueto" target="_blank"><i class="bi bi-github" height="24" width="24"></i></a></li>
+              <li class="ms-3 text-muted"><a href="https://linkedin.com/in/juan-diego-ugueto/" target="_blank"><i class="bi bi-linkedin" height="24" width="24"></i></a></li>
+              <li class="ms-3 text-muted"><a href="mailto:ugueto96@gmail.com" target="_blank"><i class="bi bi-envelope-at" height="24" width="24"></i></a></li>
             </ul>
         </footer>
     </div>
