--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="d-grid gap-3">
         <header class="d-flex flex-wrap justify-content-center py-3 my-4 border-bottom">
             <h1 class="text-center">EchoZulu</h1>
           </header>
@@ -210,11 +210,11 @@
               <p class="text-right">© 2024 Juan Diego Ugueto</p>
             </div>      
             <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-              <li class="ms-3 text-muted"><a href="https://twitter.com/ugu3to" target="_blank"><i class="bi bi-twitter" height="24" width="24"></i></a></li>
-              <li class="ms-3 text-muted"><a href="https://medium.com/@ugueto" target="_blank"><i class="bi bi-medium" height="24" width="24"></i></a></li>
-              <li class="ms-3 text-muted"><a href="https://github.com/ugueto" target="_blank"><i class="bi bi-github" height="24" width="24"></i></a></li>
-              <li class="ms-3 text-muted"><a href="https://linkedin.com/in/juan-diego-ugueto/" target="_blank"><i class="bi bi-linkedin" height="24" width="24"></i></a></li>
-              <li class="ms-3 text-muted"><a href="mailto:ugueto96@gmail.com" target="_blank"><i class="bi bi-envelope-at" height="24" width="24"></i></a></li>
+              <li class="ms-3 text-muted"><a class = "text-muted" href="https://twitter.com/ugu3to" target="_blank"><i class="bi bi-twitter" height="24" width="24"></i></a></li>
+              <li class="ms-3 text-muted"><a class = "text-muted" href="https://medium.com/@ugueto" target="_blank"><i class="bi bi-medium" height="24" width="24"></i></a></li>
+              <li class="ms-3 text-muted"><a class = "text-muted" href="https://github.com/ugueto" target="_blank"><i class="bi bi-github" height="24" width="24"></i></a></li>
+              <li class="ms-3 text-muted"><a class = "text-muted" href="https://linkedin.com/in/juan-diego-ugueto/" target="_blank"><i class="bi bi-linkedin" height="24" width="24"></i></a></li>
+              <li class="ms-3 text-muted"><a class = "text-muted" href="mailto:ugueto96@gmail.com" target="_blank"><i class="bi bi-envelope-at" height="24" width="24"></i></a></li>
             </ul>
         </footer>
     </div>
