--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 </head>
 
 <body>
-    <div class="d-grid gap-3">
+    <div class="container">
         <header class="d-flex flex-wrap justify-content-center py-3 my-4 border-bottom">
             <h1 class="text-center">EchoZulu</h1>
           </header>
 
-        <section class="books">
+        <section class="books p-2">
             <h4><u>Books</u></h4>
             <p>Here you may find all the books I have read this year:<br></p>
             <div class="list-group w-auto list-group-mine">
@@ -106,7 +106,7 @@
             </div>
         </section>
 
-        <section class="blog">
+        <section class="blog p-2">
             <h4><u>Blog</u></h4>
             <p>Here you may find an assortment of reads and listens.<br>
                 Topics are usually related to startups, technology, security, and books.
