--- a/index.html
+++ b/index.html
@@ -112,6 +112,15 @@
                 Topics are usually related to startups, technology, security, and books.
             </p>
             <div class="list-group list-group-mine w-auto">
+                <a href="https://clig.dev/" class="list-group-item list-group-item-action d-flex gap-3 py-3" target="_blank">
+                  <div class="d-flex gap-2 w-100 justify-content-between">
+                    <div>
+                      <h6 class="mb-0">[GUIDE] CLI Guidelines</h6>
+                      <p class="mb-0 opacity-75">Found on Hacker News: Interesting find on building CLIs (huge part of my work!).</p>
+                    </div>
+                    <small class="opacity-50 text-nowrap">06/02/2024</small>
+                  </div>
+                </a>
                 <a href="https://www.youtube.com/watch?v=QmWspqG42Is" class="list-group-item list-group-item-action d-flex gap-3 py-3" target="_blank">
                   <div class="d-flex gap-2 w-100 justify-content-between">
                     <div>
