--- a/index.html
+++ b/index.html
@@ -112,6 +112,15 @@
                 Topics are usually related to startups, technology, security, and books.
             </p>
             <div class="list-group list-group-mine w-auto">
+                <a href="https://paulgraham.com/procrastination.html" class="list-group-item list-group-item-action d-flex gap-3 py-3" target="_blank">
+                  <div class="d-flex gap-2 w-100 justify-content-between">
+                    <div>
+                      <h6 class="mb-0">Good and Bad Procrastination</h6>
+                      <p class="mb-0 opacity-75">One of my favourites from Paul - I don't agree with everything but it had my doing some self-reflection.</p>
+                    </div>
+                    <small class="opacity-50 text-nowrap">08/02/2024</small>
+                  </div>
+                </a>
                 <a href="https://clig.dev/" class="list-group-item list-group-item-action d-flex gap-3 py-3" target="_blank">
                   <div class="d-flex gap-2 w-100 justify-content-between">
                     <div>
