--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                   <div class="d-flex gap-2 w-100 justify-content-between">
                     <div>
                       <h6 class="mb-0">Good and Bad Procrastination</h6>
-                      <p class="mb-0 opacity-75">One of my favourites from Paul - I don't agree with everything but it had my doing some self-reflection.</p>
+                      <p class="mb-0 opacity-75">One of my favourites from Paul - I don't agree with everything but PG's essays are worth reading.</p>
                     </div>
                     <small class="opacity-50 text-nowrap">08/02/2024</small>
                   </div>
