--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                   <span class="pt-1 form-checked-content">
                   <strong><a href="https://www.amazon.com/Surely-Feynman-Adventures-Curious-Character/dp/0393316041" target="_blank">Surely You're Joking, Mr. Feynman!</a> by Richard P. Feynman</strong>
                   <small class="d-block text-muted">
-                    <i class="bi bi-book" height="1em" width="1em"></i>
+                    <i class="bi bi-calendar-check" height="1em" width="1em"></i>
                       04/02/2024
                   </small>
                   </span>
@@ -58,7 +58,7 @@
                   <span class="pt-1 form-checked-content">
                   <strong><a href="https://www.amazon.com/Malice-Faithful-Fallen-John-Gwynne/dp/0316399736" target="_blank">Malice</a> by John Gwynne</strong>
                   <small class="d-block text-muted">
-                    <i class="bi bi-book" height="1em" width="1em"></i>
+                    <i class="bi bi-calendar-check" height="1em" width="1em"></i>
                       27/01/2024
                   </small>
                   </span>
@@ -66,9 +66,9 @@
                 <label class="list-group-item d-flex gap-3">
                   <input class="form-check-input flex-shrink-0" type="checkbox" value="" style="font-size: 1.375em;">
                   <span class="pt-1 form-checked-content">
-                  <strong><a href="https://www.amazon.com/Deep-Work-Focused-Success-Distracted/dp/0349413681" target="_blank">Deep Work</a> by Cal Newport</strong>
+                  <s><strong><a href="https://www.amazon.com/Deep-Work-Focused-Success-Distracted/dp/0349413681" target="_blank">Deep Work</a> by Cal Newport</strong></s>
                   <small class="d-block text-muted">
-                    <i class="bi bi-book" height="1em" width="1em"></i>
+                    <i class="bi bi-calendar-x" height="1em" width="1em"></i>
                       27/01/2024
                   </small>
                   </span>
