--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <strong><a href="https://www.amazon.com/Build-Unorthodox-Guide-Making-Things/dp/B09W7CSD9C" target="_blank">Build</a> by Tony Fadell</strong>
                 <small class="d-block text-muted">
                   <i class="bi bi-book" height="1em" width="1em"></i>
-                    09/05/2024
+                    09/06/2024
                 </small>
                 </span>
               </label>
@@ -215,7 +215,7 @@
               <a href="https://www.youtube.com/playlist?list=PLSH_xM-KC3Zv-79sVZTTj-YA6IAqh8qeQ" class="list-group-item list-group-item-action d-flex gap-3 py-3" target="_blank">
                 <div class="d-flex gap-2 w-100 justify-content-between">
                   <div>
-                    <h6 class="mb-0">Creative Writing Lessons by Brandon Sanderson</h6>
+                    <h6 class="mb-0">Creative Writing by Brandon Sanderson</h6>
                     <p class="mb-0 opacity-75">I've been writing lately, so thought I'd share these.</p>
                   </div>
                   <small class="opacity-50 text-nowrap">09/06/2024</small>
